Change history
--------------

Release Candidate 3
===================

- Applied Tim Haines' patch adding TextAreaValue to FormHelper 

- Fixed MR-281 
  "View components params problem"

- Applied Markus Zywitza's patch adding a Fold method to TextHelper. 
  His description "Shortens a text to the specified length (using full words only and
adding an ellipsis at the end) and wraps it into a span-element that
has the title-property with the full text associated. This is
convenient for displaying properties in tables that might have very
much content (desription fields etc.) without destroying the table's
layout. Due to the title-property of the surrounding span-element, the
full text is displayed in the browser while hovering over the
shortened text."

- Applied Aaron Jensen's patch fixing MR-288
  "ApplicationPhysicalPath returns request path instead of / path"

- Fixed MR-284
  "MockServerUtility.MapPath throws NotImplementedException"

- Applied Bill Pierce's patch fixing MR-278
  "Add UrlDecode to IServerUtility"

- Applied Bryan Brown's patch fixing MR-273. This one adds a new attribute to 
  the routing configuration node: 'excludeAppPath'
  "Automatically handle ApplicationPath in the routing module"

- Applied goodwill's patch fixing MR-275
  "DefaultRailsEngineContext triggers RTE on ApplicationPhysicalPath 
   when running under ASPX Dev Server with virtual directory"

- Changed the BaseControllerTest vdir to "" instead "/"

- Added the Declare(String variable) to IJSGenerator inteface

- Applied Tim Haines' patch changing FormHelper to make calls to FormatIfNecessary 

- Applied chris ortman's patch fixing MR-271
  "AdditionalSources not loaded when using the viewEngines element"

- Applied Ricardo Stuven's patch fixing MR-258
  "JSON serialization in Ajax calls"

- Applied goodwill's patch fixing MR-212
  "Script Helpers (e.g. $Scriptaculous) installscript function clear flash unexpected"

- Applied Georges Benatti's patch 